# gtllm

./: AGENTS.md  Cargo.toml  Dioxus.toml  FLATHUB.md  README.md  com.chironjit.gtllm.appdata.xml  com.chironjit.gtllm.desktop  com.chironjit.gtllm.yml  tailwind.css
.github/workflows/: release-appimage.yml
assets/: tailwind.css
guides/dioxus/: DIOXUS_COMPONENTS.md
guides/openrouter/: EMBEDDINGS.md  OTHERS.md  STREAMING.md
src/: main.rs
src/components/: header.rs  mod.rs  sidebar.rs
src/components/common/: confirm_dialog.rs  mod.rs  toast.rs
src/components/modes/: choice.rs  collaborative.rs  competitive.rs  mod.rs  new_chat.rs  pvp.rs  settings.rs  standard.rs
src/components/modes/common/: chat.rs  input.rs  mod.rs  modal.rs  model_response_card.rs  model_selector.rs  phase_indicator.rs  prompt_card.rs  prompt_editor.rs  selection.rs  streaming_indicator.rs  vote_display.rs  vote_tally.rs
src/utils/: chat_history.rs  formatting.rs  mod.rs  openrouter.rs  run_control.rs  settings.rs  theme.rs  types.rs
